wip cnn font analyzer

--- a/oreilly-free-ebooks-dl/index.html
+++ b/oreilly-free-ebooks-dl/index.html
@@ -149,7 +149,7 @@ paths <span style="color: #555555">=</span> t2<span style="color: #555555">.</sp
     </p>
 </div>
 		<nav id="pagination">
-			
+			<a class="prev" href="http://mitakeck.github.io/cnn-font-analyzer/">Prev</a>
 			<a class="next" href="http://mitakeck.github.io/page/">Next</a>
 		</nav>
 	
