記事の体裁を微修正

--- a/oreilly-free-ebooks-dl/index.html
+++ b/oreilly-free-ebooks-dl/index.html
@@ -105,17 +105,18 @@ paths <span style="color: #555555">=</span> t2<span style="color: #555555">.</sp
 
 <p>下記 URL は『Guidelines for Keeping Pace with Innovation and Tech Adoption』という電子書籍のページ。こいつに対してさっきの置換処理を実行する。</p>
 
-<pre><code>http://www.oreilly.com/business/free/guidelines-for-keeping-pace-with-innovation-and-tech-adoption.csp
-</code></pre>
-
 <p><img src="oreilly1.png" alt="oreilly1.png" /></p>
 
-<p>すると対象電子書籍の PDF を閲覧することが出来る URL が生成される。</p>
+<p><a href="http://www.oreilly.com/business/free/guidelines-for-keeping-pace-with-innovation-and-tech-adoption.csp">http://www.oreilly.com/business/free/guidelines-for-keeping-pace-with-innovation-and-tech-adoption.csp</a> に対して <code>.csp</code> を <code>.pdf</code> に<code>/free/</code> を <code>/free/files/</code> に置換する処理を施す。
+すると対象電子書籍の PDF を閲覧することが出来る URL が生成される。</p>
 
-<pre><code>http://www.oreilly.com/business/free/files/guidelines-for-keeping-pace-with-innovation-and-tech-adoption.pdf
-</code></pre>
+<p><img src="url.png" alt="url.prg" /></p>
+
+<p>アクセスしてみる。</p>
 
 <p><img src="oreilly2.png" alt="oreilly2.png" /></p>
+
+<p>対象書籍の PDF を閲覧できた。</p>
 
 <h2 id="気づき">気づき</h2>
 
